--- a/biometric-attendance-system/frontend/package.json
+++ b/biometric-attendance-system/frontend/package.json
@@ -45,6 +45,8 @@
     "zod": "^3.25.27"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -57,7 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react": "^4.5.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.27.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -65,10 +67,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "latest": "^0.2.0",
-    "postcss": "^8.4.27",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
   },
