--- a/biometric-attendance-system/backend/package.json
+++ b/biometric-attendance-system/backend/package.json
@@ -22,63 +22,65 @@
     "db:reset": "prisma migrate reset"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.11.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
-    "date-fns": "^2.30.0",
-    "nodemailer": "^6.9.7",
-    "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.3",
-    "ioredis": "^5.3.2",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
     "@prisma/client": "^5.6.0",
-    "prisma": "^5.6.0",
-    "pg": "^8.11.3",
-    "node-cron": "^3.0.3",
-    "socket.io": "^4.7.4",
-    "pdf-lib": "^1.17.1",
-    "exceljs": "^4.4.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.1",
+    "pg": "^8.11.3",
+    "prisma": "^5.6.0",
+    "qrcode": "^1.5.3",
     "sharp": "^0.32.6",
-    "qrcode": "^1.5.3"
+    "socket.io": "^4.7.4",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/morgan": "^1.9.9",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
-    "@types/nodemailer": "^6.4.14",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/node": "^20.9.0",
-    "@types/pg": "^8.10.9",
-    "@types/node-cron": "^3.0.11",
-    "@types/qrcode": "^1.5.5",
     "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.9.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pdfkit": "^0.13.9",
+    "@types/pg": "^8.10.9",
+    "@types/qrcode": "^1.5.5",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "typescript": "^5.3.2",
-    "tsx": "^4.6.0",
-    "nodemon": "^3.0.1",
     "eslint": "^8.54.0",
-    "prettier": "^3.1.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.6.0",
+    "typescript": "^5.3.2"
   },
   "keywords": [
     "biometric",
