--- a/biometric-attendance-system/frontend/tsconfig.json
+++ b/biometric-attendance-system/frontend/tsconfig.json
@@ -28,6 +28,11 @@
       "@/context/*": ["src/context/*"]
     }
   },
-  "include": ["src", "vite.config.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["vite.config.ts", "src/**/*"],
+  "references": [{ "path": "./tsconfig.node.json" }],  
+  "exclude": [
+    "node_modules",
+    "dist",
+    "vite.config.ts"
+  ]
 }
