--- a/biometric-attendance-system/backend/package.json
+++ b/biometric-attendance-system/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "tsx watch src/app.ts",
-    "build": "tsc",
+    "build": "tsc --noEmit",
     "start": "node dist/app.js",
     "start:prod": "NODE_ENV=production node dist/app.js",
     "lint": "eslint . --ext .ts --fix",
