--- a/biometric-attendance-system/backend/tsconfig.json
+++ b/biometric-attendance-system/backend/tsconfig.json
@@ -6,10 +6,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "removeComments": true,
-    "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "declaration": true,
@@ -29,7 +27,12 @@
       "@/utils/*": ["utils/*"],
       "@/config/*": ["config/*"],
       "@/types/*": ["types/*"]
-    }
+    },
+    "noEmit": true,
+    "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "strict": false
   },
   "include": ["src/**/*", "config"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
