--- a/biometric-attendance-system/backend/package.json
+++ b/biometric-attendance-system/backend/package.json
@@ -9,8 +9,8 @@
     "build:compile": "tsc --noEmitOnError false --skipLibCheck",
     "build:force": "tsc --noEmitOnError false --skipLibCheck --allowJs",
     "type-check": "tsc --noEmit",
-    "start": "node dist/app.js",
-    "start:prod": "NODE_ENV=production node dist/app.js",
+    "start": "tsx src/app.ts",
+    "start:prod": "NODE_ENV=production tsx src/app.ts",
     "lint": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest",
