--- a/biometric-attendance-system/frontend/package.json
+++ b/biometric-attendance-system/frontend/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@digitalpersona/devices": "^0.2.6",
     "@digitalpersona/websdk": "^1.1.0",
     "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.76.2",
